<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:background="@color/cream">

    <TextView
        android:id="@+id/titleRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        android:textAlignment="viewEnd"
        android:textColor="@color/dark_orange"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="384dp"
        android:text="@string/next"

        app:iconTint="@color/black"
        app:backgroundTint="@color/dark_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRecord"
        app:rippleColor="@color/black" />

    <TextView
        android:id="@+id/repTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/repTitle"
        android:textColor="@color/warm_brown"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/weightTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRecord"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:id="@+id/weightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weightTitle"
        android:textColor="@color/warm_brown"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/repTitle"
        app:layout_constraintTop_toBottomOf="@+id/titleRecord"
        app:layout_constraintVertical_bias="0.132" />

    <EditText
        android:id="@+id/repInput1"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/repPlaceholder"
        android:inputType="number"
        android:textColor="@color/warm_brown"

        android:textColorHint="#795548"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repTitle" />

    <EditText
        android:id="@+id/repInput3"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/repPlaceholder"
        android:inputType="number"
        android:textColor="@color/warm_brown"
        android:textColorHint="#616161"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button_first"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/repInput2"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/repPlaceholder"
        android:inputType="number"
        android:textColor="@color/warm_brown"
        android:textColorHint="#616161"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/repInput3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repInput1"
        app:layout_constraintVertical_bias="0.714" />

    <EditText
        android:id="@+id/weightInput1"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/wgPlaceholder"
        android:inputType="number"
        android:textColor="@color/warm_brown"
        android:textColorHint="#616161"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toEndOf="@+id/repInput1"
        app:layout_constraintTop_toBottomOf="@+id/weightTitle" />

    <EditText
        android:id="@+id/weightInput2"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/wgPlaceholder"
        android:inputType="number"
        android:textColor="@color/warm_brown"
        android:textColorHint="#616161"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toEndOf="@+id/repInput2"
        app:layout_constraintTop_toBottomOf="@+id/weightInput1" />

    <EditText
        android:id="@+id/weightInput3"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/wgPlaceholder"
        android:inputType="number"
        android:textColor="@color/warm_brown"
        android:textColorHint="#616161"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toEndOf="@+id/repInput3"
        app:layout_constraintTop_toBottomOf="@+id/weightInput2"
        app:layout_constraintVertical_bias="0.357" />


</androidx.constraintlayout.widget.ConstraintLayout>